# 12345testtest

./: .gitignore  Makefile  pyproject.toml
configs/: config.yaml  partners_allow.txt
scripts/: crawl_pdfs.py  crawl_pdfs_sitemaps_first.py  crawl_pdfs_sync.py  discover_pdfs_headless.py  fetch_all_pdfs_headless.py  test.py
src/ragchat/: chunk.py  cli.py  crawl.py  embed.py  index_dense.py  index_sparse.py  parse.py  retrieve.py
